# zrpcd

./: .gitmodules  .travis.yml  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  README.md  configure.ac
package/: rpm.spec
package/c-capnproto/: rpm.spec
pkgsrc/: dev_compile_script.sh  packaging.sh  preinst  preinst.zrpc  zrpcd.centos  zrpcd.redhat7  zrpcd.rotate  zrpcd.suse  zrpcd.ubuntu  zrpcd_log_rotate.sh
pkgsrc/systemd/: qbgp.service
zrpcd/: Makefile.am  bfd.capnp  bgp.capnp  bgp_configurator.c  bgp_configurator.h  bgp_updater.c  bgp_updater.h  qzcclient.c  qzcclient.capnp.c  qzcclient.capnp.h  qzcclient.h  qzmqclient.c  qzmqclient.h  version.h.in  vpnservice.dualstack-ver6.thrift  vpnservice.dualstack.thrift  vpnservice.evpn.thrift  vpnservice.evpnipv6.thrift  vpnservice.ipv6.thrift  vpnservice.l3vpn.thrift  vpnservice.l3vpnipv6.thrift  vpnservice.thrift  vpnservice_types.c  vpnservice_types.h  zrpc_bfd_capnp.c  zrpc_bfd_capnp.h  zrpc_bgp_capnp.c  zrpc_bgp_capnp.h  zrpc_bgp_configurator.c  zrpc_bgp_configurator.h  zrpc_bgp_updater.c  zrpc_bgp_updater.h  zrpc_debug.c  zrpc_debug.h  zrpc_global.h  zrpc_main.c  zrpc_memory.h  zrpc_network.c  zrpc_network.h  zrpc_os_wrapper.h  (+7 more)
